# agentos

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  HISTORY.md  LICENSE  README.ko.md  README.md  SECURITY.md  harness-loop.sh  pyproject.toml  setup.sh
.agentos/mission/: plan.json
.agentos/project/: 00-project-index.md  01-project-charter.md  02-product-scope-and-requirements.md  03-system-contract.md  04-safety-risk-verification.md  05-agent-operating-contract.md  06-decisions-change-log.md  06-decisions-progress-change-log.md
.agents/: AGENTS.md  _version.json
.agents/agents/: README.md
.agents/hooks/: README.md
.agents/shims/: readlink  rg  sha256sum  stat
.agents/skills/: README.md
.agents/traces/: audit-plan-review-ci-fix.md  audit-plan-review.md  audit-principle.md  audit-usability.md
.agents/vendors/: claude.md  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md
agentos/: __init__.py  cli.py
config/: public-boundary.json
docs/: cli-reference.md  getting-started.md
scripts/: verify-clean-install.sh  verify-cli-isolated-install.sh  verify-cli-user-flow.sh  verify-public-test-suite.sh  verify-tui-reference-boundary.sh
tests/: test_auth_store.py  test_cli.py  test_cli_contract.py  test_cli_hooks.py  test_cli_isolated_install.py  test_codex_oauth.py  test_codex_provider.py  test_codex_session_integration.py  test_codex_transport.py  test_context_builder.py  test_conversation_persistence.py  test_conversation_runtime.py  test_events.py  test_interactive_cli.py  test_llm_core.py  test_runtime_bench.py  test_runtime_protocol.py  test_tui_cli.py
(+240 files in other folders)
